Fix label alignment

--- a/Registration-forms/Registration-form1/style.scss
+++ b/Registration-forms/Registration-form1/style.scss
@@ -39,8 +39,8 @@ body, html{
         i{
             color: white;
             background-color: $call;
-            padding: 16px 20px;
-            font-size: 16px;
+            padding: 17px 20px 18px 20px;
+            font-size: 14px;
             border-radius: 5px 0 0 5px;
         }
     }
